syntax = "proto3";

package example;

option java_package = "example";

service ExampleService {
  rpc getFoo(FooReq) returns (FooResp);
}

message FooReq {}
message FooResp {}
